k8s/mqtt-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt-worker
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mqtt-worker
  template:
    metadata:
      labels:
        app: mqtt-worker
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: mqtt-worker
          image: race-time/api:latest
          imagePullPolicy: Never
          command: ["/app/entrypoint-mqtt-worker.sh"]
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
